# django-permissions-manager

./: .gitignore  manage.py  pyproject.toml  requirements.txt
django_permissions_manager/: README.md  asgi.py  settings.py  urls.py  wsgi.py
django_permissions_manager/application/dto/: __init__.py  entity_dto.py  permission_dto.py  role_dto.py  user_role_dto.py
django_permissions_manager/application/interfaces/: __init__.py  entity_service.py
django_permissions_manager/application/use_cases/: __init__.py  assign_permission_group_to_role.py  assign_role_to_user.py  check_user_permission.py  create_default_roles.py  create_permission_group.py  create_role.py  get_user_roles.py  remove_role_from_user.py  update_role_permissions.py
django_permissions_manager/domain/entities/: __init__.py  permission.py  permission_group.py  role.py  user_role.py
django_permissions_manager/domain/exceptions/: __init__.py  permission_exceptions.py  role_exceptions.py  validation_exceptions.py
django_permissions_manager/domain/repositories/: __init__.py  permission_group_repository.py  permission_repository.py  role_repository.py  user_role_repository.py
django_permissions_manager/domain/services/: __init__.py  permission_checker.py  role_factory.py  role_manager.py
django_permissions_manager/domain/value_objects/: __init__.py  entity_reference.py  permission_code.py  role_name.py  user_id.py
django_permissions_manager/infrastructure/django/: apps.py  services.py  settings.py  signals.py  urls.py
django_permissions_manager/infrastructure/django/admin/: __init__.py
django_permissions_manager/infrastructure/django/mappers/: permission_group_mapper.py  permission_mapper.py  role_mapper.py  user_role_mapper.py
django_permissions_manager/infrastructure/django/migrations/: 0001_initial.py
django_permissions_manager/infrastructure/django/models/: __init__.py  permission_group_model.py  role_model.py  user_role_model.py
django_permissions_manager/infrastructure/django/repositories/: django_permission_group_repository.py  django_permission_repository.py  django_role_repository.py  django_user_role_repository.py
django_permissions_manager/infrastructure/django/views/: api.py  backends.py  (+2 more)
tests/application/use_cases/: test_assign_permission_group_to_role.py  test_assign_role_to_user.py  test_check_user_permission.py  test_create_permission_group.py  test_create_role.py  test_remove_role_from_user.py
tests/domain/services/: test_permission_checker.py  test_role_manager.py
tests/domain/value_objects/: test_entity_reference.py  test_permission_code.py  test_role_name.py  test_user_id.py
(+6 files in other folders)
