[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "django-permissions-manager"
version = "0.1.0"
description = "A Django library for role-based permission management using hexagonal architecture."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["django", "permissions", "roles", "rbac", "ddd", "hexagonal"]
classifiers = [
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
    "Framework :: Django :: 6.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
]
dependencies = [
    "Django>=4.2",
    "djangorestframework>=3.14",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-django>=4.8",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["django_permissions_manager*"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "django_permissions_manager.settings"
python_files = ["test_*.py"]
testpaths = ["tests"]
